syntax = "proto3";

package proto;

option go_package = "/proto";

message helloRequest {
    string name = 1;
}

message helloReponse {
    string greeting = 1;
}

message Password {
    string password = 1;
    string confirmPassword = 2;
    bool status = 3;
}
message PasswordRequest {
    string checkApi = 1;

    Password password = 2;
}

message PasswordResponse {
    string status = 1;
    string message = 2;
}

service helloService {
    rpc Hello(helloRequest) returns (helloReponse) {};
    rpc Password(PasswordRequest) returns (PasswordResponse) {};
}